# diff-operators

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerFlags.cmake  DefineTargets.cmake
source/: api_operators_serial.f90  compact_derivatives.f90  custom_stencil_derivatives.f90  derivatives_old.f90  operators_serial.f90  serial_vector_field_operators.smod
test/: plot_derivatives.py  test_compact.f90  test_operators.f90
